# practical-haskell

./: .gitignore  README.md
abstracting-functions/: README.md  abstracting-functions.cabal
abstracting-functions/src/: Lib.hs
deriving-via/: README.md  deriving-via.cabal  stack.yaml
deriving-via/src/: ExternalAPI.hs  Json.hs  Lib.hs  ReadShow.hs
gadt-ddd/: CHANGELOG.md  LICENSE  README.md  gadt-ddd.cabal  stack.yaml
gadt-ddd/src/: Lib.hs
replace-prelude/: README.md  replace-prelude.cabal
replace-prelude/src/: Lib.hs  Prelude.hs
semigroup-environment/: README.md  semigroup-environment.cabal
semigroup-environment/src/: Lib.hs
type-level-user-roles/: LICENSE  README.md  package.yaml  stack.yaml  typelevel-roles.cabal
type-level-user-roles/app/: Main.hs
type-level-user-roles/src/API/: Definition.hs  Playing.hs  Run.hs  WithAuth.hs
