name:                abstracting-functions
version:             0.1.0.0
homepage:            https://github.com/dnikolovv/abstracting-functions#readme
author:              Jason Shipman
maintainer:          jasonpshipman@gmail.com
copyright:           Copyright (c) 2022 Dobromir Nikolov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       text
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/dnikolovv/practical-haskell
