name:                gadt-ddd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dnikolovv/gadt-ddd#readme
license:             BSD3
license-file:        LICENSE
author:              Dobromir Nikolov
maintainer:          dnikolovv@hotmail.com
copyright:           Copyright (c) 2022 Dobromir Nikolov
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/dnikolovv/gadt-ddd
