name:                replace-prelude
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dnikolovv/replace-prelude#readme
author:              Dobromir Nikolov
maintainer:          dnikolovv@hotmail.com
copyright:           Copyright (c) 2022 Dobromir Nikolov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib,
                       Prelude
  build-depends:       base >= 4.7 && < 5,
                       rio == 0.1.21.0
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/dnikolovv/replace-prelude
